--- a/src/app/modules/user/components/blog-card/blog-card.component.html
+++ b/src/app/modules/user/components/blog-card/blog-card.component.html
@@ -5,18 +5,36 @@
     <div class="flex items-center justify-between">
       <div class="flex items-start" *ngIf="personal">
         <img
-          src="./af1d3ee27865dcd4f070d0a36d7453d7.jpeg"
+          *ngIf="blog?.author?.profile?.public_url; else noProfile"
+          src="{{ blog.author.profile.public_url }}"
           alt="Image"
           class="w-12 h-12 rounded-full mr-3"
         />
+        <ng-template #noProfile>
+          <img
+            src="./../../../../../assets/profile-svgrepo-com.svg  "
+            alt="Profile Picture"
+            class="w-12 h-12 rounded-full mr-3"
+          />
+        </ng-template>
         <div>
-          <span class="text-sm font-medium text-white">Author Name</span>
-          <span class="text-xs font-medium text-white block">username</span>
+          <span class="text-sm font-medium text-white">{{
+            blog.author.fullname
+          }}</span>
+          <span class="text-xs font-medium text-white block">{{
+            blog.author.username
+          }}</span>
         </div>
       </div>
       <span *ngIf="blog?.created_at" class="text-sm font-medium text-white">{{
         blog.created_at | date
       }}</span>
+      <!-- <span>
+        <mat-icon *ngIf="blog.is_public == 1; else private">public</mat-icon>
+        <ng-template #private>
+          <mat-icon>lock</mat-icon>
+        </ng-template>
+      </span> -->
     </div>
     <div class="mt-3">
       <h1 *ngIf="blog?.title" class="text-lg font-medium text-white">
@@ -43,18 +61,58 @@
     </div>
   </div>
   <div
+    *ngIf="personal; else UserDailog"
     class="px-4 py-3 flex justify-between items-center border-t border-gray-200"
   >
     <div class="flex items-center">
-      <button class="text-sm font-medium text-white mr-4 hover:text-blue-500">
+      <button
+        class="text-sm font-medium text-white mr-4 hover:text-red-500 flex items-center"
+      >
+        <span class="mr-1">
+          <mat-icon>favorite</mat-icon>
+        </span>
         Like
       </button>
-      <button class="text-sm font-medium text-white mr-4 hover:text-blue-500">
+      <button
+        class="text-sm font-medium text-white mr-4 hover:text-blue-500 flex items-center"
+      >
+        <span class="mr-1">
+          <mat-icon>comment</mat-icon>
+        </span>
         Comment
       </button>
-      <button class="text-sm font-medium text-white hover:text-blue-500">
+      <button
+        class="text-sm font-medium text-white mr-4 hover:text-gray-400 flex items-center"
+      >
+        <span class="mr-1">
+          <mat-icon>bookmark</mat-icon>
+        </span>
         Bookmark
       </button>
     </div>
   </div>
+  <ng-template #UserDailog>
+    <div
+      class="px-4 py-3 flex justify-between items-center border-t border-gray-200"
+    >
+      <div class="flex items-center">
+        <button
+          class="text-sm font-medium text-white mr-4 hover:text-blue-500 flex items-center"
+        >
+          <span class="mr-1">
+            <mat-icon>edit</mat-icon>
+          </span>
+          Edit
+        </button>
+        <button
+          class="text-sm font-medium text-white mr-4 hover:text-red-500 flex items-center"
+        >
+          <span class="mr-1">
+            <mat-icon>delete</mat-icon>
+          </span>
+          Delete
+        </button>
+      </div>
+    </div>
+  </ng-template>
 </div>
